--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 									</div>
 									<div id="faq-8" class="panel-collapse collapse in">
 										<div class="panel-body">
-											Applications close on Sunday, February 22. We will release decisions by late February.
+											Early applications have closed. We are now accepting applications on a rolling basis. We will release decisions by late February.
 										</div>
 									</div>
 								</div>
