Fixed application FAQ

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
 									</div>
 									<div id="faq-8" class="panel-collapse collapse in">
 										<div class="panel-body">
-											Early applications have closed. We are now accepting applications on a rolling basis. We will release decisions by late February.
+											Applications have closed. We will release decisions by late February.
 										</div>
 									</div>
 								</div>
