clean fixes PLEASE CONTACT JZ IF YOU DEL STUFF
Justin, if you see something wrong, ASK me first before you go and git
reset --hard

--- a/index.html
+++ b/index.html
@@ -127,87 +127,7 @@
 					</span>
 				</div>
 
-				<!-- Schedule
-				================================================== -->
-				<div id="schedule">
-					<div id="schedule-content" class="container">
-						<div class="page-header">
-							<h1>Schedule</h1>
-						</div>
-
-						<div class="col-sm-12 col-md-6">
-							<h4>Saturday, March 14</h4>
-							<table>
-								<tbody>
-									<tr>
-										<th class="time">Time</th>
-										<th class="event">Event</th>
-									</tr>
-									<tr>
-										<td>2 PM</td>
-										<td>Doors Open</td>
-									</tr>
-									<tr>
-										<td>3 PM</td>
-										<td>Opening Ceremony</td>
-									</tr>
-									<tr>
-										<td>4 PM</td>
-										<td>Hacking Begins</td>
-									</tr>
-									<tr>
-										<td>7 PM</td>
-										<td>Dinner</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-						<div class="col-sm-12 col-md-6">
-							<h4>Sunday, March 15</h4>
-							<table>
-								<tbody>
-									<tr>
-										<th class="time">Time</th>
-										<th class="event">Event</th>
-									</tr>
-									<tr>
-										<td>12 AM</td>
-										<td>Midnight Snack</td>
-									</tr>
-									<tr>
-										<td>7 AM</td>
-										<td>Breakfast</td>
-									</tr>
-									<tr>
-										<td>9 AM</td>
-										<td>Judges Arrive</td>
-									</tr>
-									<tr>
-										<td>10 AM</td>
-										<td>Hacking Ends</td>
-									</tr>
-									<tr>
-										<td>10 AM</td>
-										<td>Presentations</td>
-									</tr>
-									<tr>
-										<td>12 PM</td>
-										<td>Judges Deliberate</td>
-									</tr>
-									<tr>
-										<td>12 PM</td>
-										<td>Lunch</td>
-									</tr>
-									<tr>
-										<td>1 PM</td>
-										<td>Closing Ceremony</td>
-									</tr>
-								</tbody>
-							</table>
-						</div>
-					</div>
-				</div>
-
+				
 				<!-- FAQ
 				================================================== -->
 				<div id="faq">
@@ -368,6 +288,106 @@
 						</div>
 					</div>
 				</div>
+				<!-- Schedule
+				================================================== -->
+				<div style="padding-top:20px" id="schedule">
+						<div id="schedule-content" class="container">
+							<div class="row">
+								<div class="col-sm-12">
+									<div>
+										<div class="page-header">
+												<h1 class="schedule">Schedule</h1>
+										</div>
+									</div>
+								</div>
+								<div class="col-sm-2"></div>
+								<div class="col-sm-8">
+									<h2>Saturday</h2>
+									<table class="table table-bodered">
+										<thead>
+										<tr>
+											<th>Time</th>
+											<th>Event</th>
+										</tr>
+										</thead>
+										<tbody>
+										<tr>
+											<td>2:00 PM</td>
+											<td>
+											Doors Open
+											
+												</td>
+										</tr>
+										<tr>
+											<td>2:30 PM</td>
+											<td>Opening Ceremony</td>
+										</tr>
+										<tr>
+											<td>3:00 PM</td>
+											<td>Hacking Begins</td>
+										</tr>
+										<tr>
+											<td>4:30PM</td>
+											<td>First Workshop - TBD</td>
+										</tr>
+										<tr>
+											<td>7:30 PM</td>
+											<td>Dinner from Chipotle</td>
+										</tr>
+										<tr>
+											<td>12:00 AM</td>
+											<td>Special Midnight Event TBA</td>
+										</tr>
+										</tbody>
+
+									</table>
+									<h2>Sunday</h2>
+									<table class="table table-bodered">
+										<thead>
+										<tr>
+											<th>Time</th>
+											<th>Event</th>
+										</tr>
+										</thead>
+										<tbody>
+										<tr>
+											<td>12:00 AM</td>
+											<td>Hack through the Night!</td>
+										</tr>
+										<tr>
+											<td>7:00 AM</td>
+											<td>Breakfast from Corner Bakery</td>
+										</tr>
+										<tr>
+											<td>10:00 AM</td>
+											<td>Judges Arrive</td>
+										</tr>
+										<tr>
+											<td>11:00 AM</td>
+											<td>Hacking Ends<br>Lunch - Pizza from Costco</td>
+										</tr>
+
+										<tr>
+											<td>11:30 PM</td>
+											<td>Presentations</td>
+										</tr>
+										<tr>
+											<td>1:30 PM</td>
+											<td>Judging and Prizes <br> Closing Ceremony</td>
+										</tr>
+										<tr>
+											<td>2:00 PM</td>
+											<td>Hackathon Ends</td>
+										</tr>
+										</tbody>
+
+									</table>
+
+
+								</div>
+							</div>
+						</div>
+					</div>
 
 				<!-- Sponsors
 				================================================== -->
