--- a/index.html
+++ b/index.html
@@ -412,7 +412,10 @@
 											</a>
 										</div> -->
 										<div id="sponsor-call-to-action">
-											We're finalizing our sponsor list soon! Check out our sponsorship packages below, or shoot us an email at <a href="mailto:sponsor@gunnhacks.com">sponsor@gunnhacks.com</a> to see how you can get involved.
+											Generously Sponsored by
+											<div>
+											<a href="//a16z.com"><img id="sponsor_logo" src="img/AndreessenHorowitz.png"></a>
+											</div>
 										</div>
 										<div id="sponsor-link">
 											<a href="sponsor.pdf" class="btn btn-danger btn-raised">Sponsor GunnHacks</a>
