New surprise event
JZ, please take care when committing. Your code was all messed up.

--- a/index.html
+++ b/index.html
@@ -127,7 +127,98 @@
 					</span>
 				</div>
 
-				
+				<!-- Schedule
+				================================================== -->
+				<div id="schedule">
+					<div id="schedule-content" class="container">
+						<div class="page-header">
+							<h1 class="schedule">Schedule</h1>
+						</div>
+						<div class="row">
+							<div class="col-xs-8 col-xs-push-2">
+								<h2 id="saturday">Saturday</h2>
+								<table class="table table-bordered">
+									<thead>
+										<tr>
+											<th>Time</th>
+											<th>Event</th>
+										</tr>
+										</thead>
+									<tbody>
+										<tr>
+											<td>2:00 PM</td>
+											<td>Doors Open</td>
+										</tr>
+										<tr>
+											<td>2:30 PM</td>
+											<td>Opening Ceremony</td>
+										</tr>
+										<tr>
+											<td>3:00 PM</td>
+											<td>Hacking Begins</td>
+										</tr>
+										<tr>
+											<td>7:30 PM</td>
+											<td>Dinner &ndash; Burritos from Chipotle</td>
+										</tr>
+										<tr>
+											<td>9:26 PM</td>
+											<td>A Special Surprise!</td>
+										</tr>
+										<tr>
+											<td>12:00 AM</td>
+											<td>Special Midnight Event</td>
+										</tr>
+									</tbody>
+								</table>
+								<h2>Sunday</h2>
+								<table class="table table-bordered">
+									<thead>
+										<tr>
+											<th>Time</th>
+											<th>Event</th>
+										</tr>
+									</thead>
+									<tbody>
+										<tr>
+											<td>12:00 AM</td>
+											<td>Hack Through the Night!</td>
+										</tr>
+										<tr>
+											<td>7:00 AM</td>
+											<td>Breakfast &ndash; Pastries from Corner Bakery</td>
+										</tr>
+										<tr>
+											<td>10:00 AM</td>
+											<td>Judges Arrive</td>
+										</tr>
+										<tr>
+											<td>11:00 AM</td>
+											<td>Hacking Ends</td>
+										</tr>
+										<tr>
+											<td>11:00 PM</td>
+											<td>Presentations</td>
+										</tr>
+										<tr>
+											<td>12:30 PM</td>
+											<td>Judging<br>Lunch &ndash; Pizza from Costco</td>
+										</tr>
+										<tr>
+											<td>1:30 PM</td>
+											<td>Closing Ceremony</td>
+										</tr>
+										<tr>
+											<td>2:00 PM</td>
+											<td>Hackathon Ends</td>
+										</tr>
+									</tbody>
+								</table>
+							</div>
+						</div>
+					</div>
+				</div>
+			
 				<!-- FAQ
 				================================================== -->
 				<div id="faq">
@@ -288,106 +379,6 @@
 						</div>
 					</div>
 				</div>
-				<!-- Schedule
-				================================================== -->
-				<div style="padding-top:20px" id="schedule">
-						<div id="schedule-content" class="container">
-							<div class="row">
-								<div class="col-sm-12">
-									<div>
-										<div class="page-header">
-												<h1 class="schedule">Schedule</h1>
-										</div>
-									</div>
-								</div>
-								<div class="col-sm-2"></div>
-								<div class="col-sm-8">
-									<h2>Saturday</h2>
-									<table class="table table-bodered">
-										<thead>
-										<tr>
-											<th>Time</th>
-											<th>Event</th>
-										</tr>
-										</thead>
-										<tbody>
-										<tr>
-											<td>2:00 PM</td>
-											<td>
-											Doors Open
-											
-												</td>
-										</tr>
-										<tr>
-											<td>2:30 PM</td>
-											<td>Opening Ceremony</td>
-										</tr>
-										<tr>
-											<td>3:00 PM</td>
-											<td>Hacking Begins</td>
-										</tr>
-										<tr>
-											<td>4:30PM</td>
-											<td>First Workshop - TBD</td>
-										</tr>
-										<tr>
-											<td>7:30 PM</td>
-											<td>Dinner from Chipotle</td>
-										</tr>
-										<tr>
-											<td>12:00 AM</td>
-											<td>Special Midnight Event TBA</td>
-										</tr>
-										</tbody>
-
-									</table>
-									<h2>Sunday</h2>
-									<table class="table table-bodered">
-										<thead>
-										<tr>
-											<th>Time</th>
-											<th>Event</th>
-										</tr>
-										</thead>
-										<tbody>
-										<tr>
-											<td>12:00 AM</td>
-											<td>Hack through the Night!</td>
-										</tr>
-										<tr>
-											<td>7:00 AM</td>
-											<td>Breakfast from Corner Bakery</td>
-										</tr>
-										<tr>
-											<td>10:00 AM</td>
-											<td>Judges Arrive</td>
-										</tr>
-										<tr>
-											<td>11:00 AM</td>
-											<td>Hacking Ends<br>Lunch - Pizza from Costco</td>
-										</tr>
-
-										<tr>
-											<td>11:30 PM</td>
-											<td>Presentations</td>
-										</tr>
-										<tr>
-											<td>1:30 PM</td>
-											<td>Judging and Prizes <br> Closing Ceremony</td>
-										</tr>
-										<tr>
-											<td>2:00 PM</td>
-											<td>Hackathon Ends</td>
-										</tr>
-										</tbody>
-
-									</table>
-
-
-								</div>
-							</div>
-						</div>
-					</div>
 
 				<!-- Sponsors
 				================================================== -->
@@ -401,24 +392,21 @@
 										<div class="page-header">
 											<h1 id="sponsors">Sponsors</h1>
 										</div>
-										<div class="sponsor_logo tier1">
-											<a href="//paleyontology.com" class="tooltip" title="Gunn Computer Science Department">
-												<img src="img/logo.svg">
+										<h2 id="sponsor-lead-in">
+											Generously Presented By
+										</h2>
+										<div class="tier1">
+											<a href="//a16z.com" class="tooltip" id="a16z-logo" title="Andreessen Horowitz">
+												<img id="a16z-img" src="img/AndreessenHorowitz.png">
 											</a>
 										</div>
-										<!-- <div class="sponsor_logo tier1">
-											<a href="//a16z.com" class="tooltip" title="Andreessen Horowitz">
-												<img src="img/AndreessenHorowitz.png">
+										<h2 id="sponsor-lead-in">
+											With Support From
+										</h2>
+										<div class="tier1">
+											<a href="//paleyontology.com" class="tooltip" title="The Gunn Computer Science Department">
+												<img id="gunn-cs-img" src="img/logo.svg">
 											</a>
-										</div> -->
-										<div id="sponsor-call-to-action">
-											Generously Sponsored by
-											<div>
-											<a href="//a16z.com"><img id="sponsor_logo" src="img/AndreessenHorowitz.png"></a>
-											</div>
-										</div>
-										<div id="sponsor-link">
-											<a href="sponsor.pdf" class="btn btn-danger btn-raised">Sponsor GunnHacks</a>
 										</div>
 									</div>
 								</div>
@@ -467,7 +455,6 @@
 	<script src="js/smooth-scroll.min.js"></script>
 	<script src="js/jquery.tooltipster.min.js"></script>
 	<script src="js/modernizr.custom.js"></script>
-	<script src="js/jquery.dlmenu.js"></script>
 
 	<!-- Google Analytics -->
 	<script>
