Minor optimizations for smaller screens

--- a/index.html
+++ b/index.html
@@ -135,13 +135,13 @@
 							<h1 class="schedule">Schedule</h1>
 						</div>
 						<div class="row">
-							<div class="col-xs-8 col-xs-push-2">
+							<div class="col-xs-12 col-md-8 col-md-push-2">
 								<h2 id="saturday">Saturday</h2>
 								<table class="table table-bordered">
 									<thead>
 										<tr>
-											<th>Time</th>
-											<th>Event</th>
+											<th class="time">Time</th>
+											<th class="event">Event</th>
 										</tr>
 										</thead>
 									<tbody>
@@ -175,8 +175,8 @@
 								<table class="table table-bordered">
 									<thead>
 										<tr>
-											<th>Time</th>
-											<th>Event</th>
+											<th class="time">Time</th>
+											<th class="event">Event</th>
 										</tr>
 									</thead>
 									<tbody>
