Added attendees group assets

--- a/index.html
+++ b/index.html
@@ -194,11 +194,7 @@
 										</tr>
 										<tr>
 											<td>11:00 AM</td>
-											<td>Hacking Ends</td>
-										</tr>
-										<tr>
-											<td>11:00 PM</td>
-											<td>Presentations</td>
+											<td>Hacking Ends<br>Presentations</td>
 										</tr>
 										<tr>
 											<td>12:30 PM</td>
