made things look not chitty

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 						<div class="row">
 							<div class="col-xs-12 col-md-8 col-md-push-2">
 								<h2 id="saturday">Saturday</h2>
-								<table class="table table-bordered">
+								<table class="table schedule">
 									<thead>
 										<tr>
 											<th class="time">Time</th>
@@ -172,7 +172,7 @@
 									</tbody>
 								</table>
 								<h2>Sunday</h2>
-								<table class="table table-bordered">
+								<table class="table schedule">
 									<thead>
 										<tr>
 											<th class="time">Time</th>
@@ -389,16 +389,13 @@
 											<h1 id="sponsors">Sponsors</h1>
 										</div>
 										<h2 id="sponsor-lead-in">
-											Generously Presented By
+											Generously Sponsored By
 										</h2>
 										<div class="tier1">
 											<a href="//a16z.com" class="tooltip" id="a16z-logo" title="Andreessen Horowitz">
 												<img id="a16z-img" src="img/AndreessenHorowitz.png">
 											</a>
 										</div>
-										<h2 id="sponsor-lead-in">
-											With Support From
-										</h2>
 										<div class="tier1">
 											<a href="//paleyontology.com" class="tooltip" title="The Gunn Computer Science Department">
 												<img id="gunn-cs-img" src="img/logo.svg">
