Added Make School logo

--- a/index.html
+++ b/index.html
@@ -158,7 +158,15 @@
 											<td>Hacking Begins</td>
 										</tr>
 										<tr>
-											<td>7:30 PM</td>
+											<td>6:00 PM</td>
+											<td>Build Flappy Bird in an hour! by Make&nbsp;School</td>
+										</tr>
+										<tr>
+											<td>7:00 PM</td>
+											<td>Advanced iOS Workshop by Make School</td>
+										</tr>
+										<tr>
+											<td>8:30 PM</td>
 											<td>Dinner &ndash; Burritos from Chipotle</td>
 										</tr>
 										<tr>
@@ -166,8 +174,8 @@
 											<td>A Special Surprise!</td>
 										</tr>
 										<tr>
-											<td>12:00 AM</td>
-											<td>Special Midnight Event</td>
+											<td>9:30 PM</td>
+											<td>How to Get Into YC &ndash; Talk by Make School</td>
 										</tr>
 									</tbody>
 								</table>
@@ -182,7 +190,15 @@
 									<tbody>
 										<tr>
 											<td>12:00 AM</td>
+											<td>Special Midnight Event</td>
+										</tr>
+										<tr>
+											<td>12:00 AM</td>
 											<td>Hack Through the Night!</td>
+										</tr>
+										<tr>
+											<td>2:00 AM</td>
+											<td>An Introduction to UNIX-Like Operating Systems - Talk by Gunn United Computations Club</td>
 										</tr>
 										<tr>
 											<td>8:00 AM</td>
@@ -388,18 +404,31 @@
 										<div class="page-header">
 											<h1 id="sponsors">Sponsors</h1>
 										</div>
-										<h2 id="sponsor-lead-in">
+										<!-- <h2 id="sponsor-lead-in">
 											Generously Sponsored By
-										</h2>
-										<div class="tier1">
-											<a href="//a16z.com" class="tooltip" id="a16z-logo" title="Andreessen Horowitz">
-												<img id="a16z-img" src="img/AndreessenHorowitz.png">
-											</a>
-										</div>
-										<div class="tier1">
-											<a href="//paleyontology.com" class="tooltip" title="The Gunn Computer Science Department">
-												<img id="gunn-cs-img" src="img/logo.svg">
-											</a>
+										</h2> -->
+										<div class="row">
+											<div class="col-xs-12 col-sm-4">
+												<div class="tier1">
+													<a href="//a16z.com" class="tooltip" id="a16z-logo" title="Andreessen Horowitz">
+														<img id="a16z-img" src="/img/AndreessenHorowitz.png">
+													</a>
+												</div>
+											</div>
+											<div class="col-xs-12 col-sm-4">
+												<div class="tier1">
+													<a href="//www.makeschool.com/" class="tooltip" id="makeschool-logo" title="Make School">
+														<img id="makeschool-img" src="/img/MakeSchool.png">
+													</a>
+												</div>
+											</div>
+											<div class="col-xs-12 col-sm-4">
+												<div class="tier1">
+													<a href="//paleyontology.com" class="tooltip" title="The Gunn Computer Science Department">
+														<img id="gunn-cs-img" src="/img/logo.svg">
+													</a>
+												</div>
+											</div>
 										</div>
 									</div>
 								</div>
