--- a/index.html
+++ b/index.html
@@ -158,7 +158,19 @@
 											<td>Hacking Begins</td>
 										</tr>
 										<tr>
+											<td>5:30 PM</td>
+											<td>iOS Beginner Workshop<br>MakeSchool</td>
+										</tr>
+										<tr>
+											<td>6:30 PM</td>
+											<td>How to get into YCombinator - VC Talk<br>Jeremy Rossman - Founder of MakeSchool</td>
+										</tr>
+										<tr>
 											<td>7:30 PM</td>
+											<td>iOS Intermediate/Advanced Workshop<br>MakeSchool</td>
+										</tr>
+										<tr>
+											<td>8:30 PM</td>
 											<td>Dinner &ndash; Burritos from Chipotle</td>
 										</tr>
 										<tr>
