--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 										</tr>
 										<tr>
 											<td>2:00 AM</td>
-											<td>An Introduction to UNIX-Like Operating Systems - Talk by Gunn United Computations Club</td>
+											<td>An Introduction to Unix-Like Operating Systems<br>Talk by Gunn United Computations Club</td>
 										</tr>
 										<tr>
 											<td>8:00 AM</td>
